adapted for iPad AutoSize function.

--- a/BeautyGallery/Base.lproj/LaunchScreen.storyboard
+++ b/BeautyGallery/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,16 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="japanese" translatesAutoresizingMaskIntoConstraints="NO" id="C7F-af-mIC">
+                                <rect key="frame" x="140" y="16" width="320" height="568"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="C7F-af-mIC" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="3qB-U2-Pkl"/>
+                            <constraint firstItem="C7F-af-mIC" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="6BT-N9-0pf"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +33,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="japanese" width="320" height="568"/>
+    </resources>
 </document>
